--- a/index.html
+++ b/index.html
@@ -3,8 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <title>Odin RPS</title>
   </head>
-  <body></body>
+  <body>
+    <div class="btn-container">
+      <button id="rock">Rock</button>
+      <button id="paper">Paper</button>
+      <button id="scissors">Scissors</button>
+    </div>
+
+    <div id="results">
+      <p id="message"></p>
+      <p id="humanScore"></p>
+      <p id="compScore"></p>
+    </div>
+  </body>
 </html>
